# net-net

./: .codecov.yml  .gitignore  CMakeLists.txt  Makefile  README.md  make_icmp_pcap.py  make_pcap.py  netnet.db  requirements.txt
.github/ISSUE_TEMPLATE/: technical-debt-enhancement-template.md  user-story-template.md
.github/agents/: mentor-defensive-coder.agent.md
.github/workflows/: ci.yml
CMake/: config.h  config.h.in
docs/: EntityRelationshipDataModel.md  api.md  design.md  packetFlowDiagram.md  securityChecklistReview.md
examples/: sample-config.ci.yaml  sample-config.yaml
src/: main.cpp
src/core/: ConnectionTracker.cpp  ConnectionTracker.h  PacketMeta.h  Parser.cpp  Parser.h  SessionManager.cpp  SessionManager.h  StatsAggregator.cpp  StatsAggregator.h  StatsPersistence.cpp  StatsPersistence.h  parser.cpp  parser.h
src/daemon/: Main.cpp  NetMonDaemon.cpp  NetMonDaemon.h
src/net/: PcapAdapter.cpp  PcapAdapter.h
tests/fixtures/: icmp_sample.pcap  sample.pcap
tests/integration/: test_api.py  test_api_error_paths.cpp  test_authentication.py  test_connection_tracker.cpp  test_netmon_daemon.cpp  test_netmon_error_paths.cpp  test_stats_aggregator_integration.cpp
tests/unit/: test_metrics_endpoint.cpp  test_parser.cpp  test_parser_extended.cpp  test_pcap_adapter.cpp  test_pcap_adapter_extended.cpp  test_session_manager.cpp  test_stats_aggregator.cpp  test_stats_persistence.cpp
www/: app.js  index.html  style.css
